// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component FileUploadRowDefaultView should not render access selector or date picker if access condition is not required to select 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 4,
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    spacing={2}
    wrap="nowrap"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={1}
    >
      <WithStyles(ForwardRef(IconButton))
        data-testid="new-file-upload-up-0"
        disabled={true}
        id="new-file-upload-down-0"
      >
        <Memo(ForwardRef(ExpandLessIcon)) />
      </WithStyles(ForwardRef(IconButton))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    spacing={1}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={11}
      sm={11}
    >
      <WithStyles(ForwardRef(Typography))
        data-testid="dsi-dsid-0"
        gutterBottom={true}
        noWrap={true}
        variant="body2"
      >
        test.pdf
         (
        100 MB
        )
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className=""
      item={true}
      xs={1}
    >
      <Connect(FileUploadRowStatus)
        disabled={false}
        fileUploadRowStatusId="dsi-dsid-0"
        name="test.pdf"
        onDelete={[MockFunction]}
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    spacing={2}
    wrap="nowrap"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={1}
    >
      <WithStyles(ForwardRef(IconButton))
        data-testid="new-file-upload-down-0"
        disabled={false}
        id="new-file-upload-down-0"
      >
        <Memo(ForwardRef(ExpandMoreIcon)) />
      </WithStyles(ForwardRef(IconButton))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`Component FileUploadRowDefaultView should not render embargo date picker if access condition is set to closed access 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 4,
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    spacing={2}
    wrap="nowrap"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={1}
    >
      <WithStyles(ForwardRef(IconButton))
        data-testid="new-file-upload-up-0"
        disabled={true}
        id="new-file-upload-down-0"
      >
        <Memo(ForwardRef(ExpandLessIcon)) />
      </WithStyles(ForwardRef(IconButton))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    spacing={1}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={6}
      sm={5}
    >
      <WithStyles(ForwardRef(Typography))
        data-testid="dsi-dsid-0"
        gutterBottom={true}
        noWrap={true}
        variant="body2"
      >
        test.pdf
         (
        100 MB
        )
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={3}
      sm={4}
    >
      <Memo(NewGenericSelectField)
        autoFocus={false}
        disabled={false}
        displayEmpty={true}
        error={false}
        formHelperTextProps={
          Object {
            "className": undefined,
          }
        }
        genericSelectFieldId="dsi-open-access-0"
        hideLabel={true}
        itemsList={
          Array [
            Object {
              "text": "Open Access",
              "value": 5,
            },
            Object {
              "text": "Closed Access",
              "value": 1,
            },
          ]
        }
        onChange={[MockFunction]}
        required={true}
        selectPrompt="Select access conditions"
        selectProps={
          Object {
            "className": undefined,
            "input": <WithStyles(ForwardRef(Input))
              autoFocus={false}
              classes={
                Object {
                  "root": undefined,
                }
              }
              disableUnderline={true}
            />,
          }
        }
        value={1}
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={2}
      sm={2}
    >
      <WithStyles(ForwardRef(Typography))
        data-testid="dsi-embargo-date-0"
        gutterBottom={true}
        variant="body2"
      >
        No date required
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className=""
      item={true}
      xs={1}
    >
      <Connect(FileUploadRowStatus)
        disabled={false}
        fileUploadRowStatusId="dsi-dsid-0"
        name="test.pdf"
        onDelete={[MockFunction]}
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    spacing={2}
    wrap="nowrap"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={1}
    >
      <WithStyles(ForwardRef(IconButton))
        data-testid="new-file-upload-down-0"
        disabled={false}
        id="new-file-upload-down-0"
      >
        <Memo(ForwardRef(ExpandMoreIcon)) />
      </WithStyles(ForwardRef(IconButton))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`Component FileUploadRowDefaultView should render default view 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 4,
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    spacing={2}
    wrap="nowrap"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={1}
    >
      <WithStyles(ForwardRef(IconButton))
        data-testid="new-file-upload-up-0"
        disabled={true}
        id="new-file-upload-down-0"
      >
        <Memo(ForwardRef(ExpandLessIcon)) />
      </WithStyles(ForwardRef(IconButton))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    spacing={1}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={6}
      sm={5}
    >
      <WithStyles(ForwardRef(Typography))
        data-testid="dsi-dsid-0"
        gutterBottom={true}
        noWrap={true}
        variant="body2"
      >
        test.pdf
         (
        100 MB
        )
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={3}
      sm={4}
    >
      <Memo(NewGenericSelectField)
        autoFocus={false}
        disabled={false}
        displayEmpty={true}
        error="This field is required"
        formHelperTextProps={
          Object {
            "className": undefined,
          }
        }
        genericSelectFieldId="dsi-open-access-0"
        hideLabel={true}
        itemsList={
          Array [
            Object {
              "text": "Open Access",
              "value": 5,
            },
            Object {
              "text": "Closed Access",
              "value": 1,
            },
          ]
        }
        onChange={[MockFunction]}
        required={true}
        selectPrompt="Select access conditions"
        selectProps={
          Object {
            "className": undefined,
            "input": <WithStyles(ForwardRef(Input))
              autoFocus={false}
              classes={
                Object {
                  "root": undefined,
                }
              }
              disableUnderline={true}
            />,
          }
        }
        value=""
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={2}
      sm={2}
    >
      <WithStyles(ForwardRef(Typography))
        data-testid="dsi-embargo-date-0"
        gutterBottom={true}
        variant="body2"
      >
        No date required
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className=""
      item={true}
      xs={1}
    >
      <Connect(FileUploadRowStatus)
        disabled={false}
        fileUploadRowStatusId="dsi-dsid-0"
        name="test.pdf"
        onDelete={[MockFunction]}
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    spacing={2}
    wrap="nowrap"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={1}
    >
      <WithStyles(ForwardRef(IconButton))
        data-testid="new-file-upload-down-0"
        disabled={false}
        id="new-file-upload-down-0"
      >
        <Memo(ForwardRef(ExpandMoreIcon)) />
      </WithStyles(ForwardRef(IconButton))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`Component FileUploadRowDefaultView should render default view for admin 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 4,
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    spacing={2}
    wrap="nowrap"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={1}
    >
      <WithStyles(ForwardRef(IconButton))
        data-testid="new-file-upload-up-0"
        disabled={true}
        id="new-file-upload-down-0"
      >
        <Memo(ForwardRef(ExpandLessIcon)) />
      </WithStyles(ForwardRef(IconButton))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    spacing={1}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={6}
      sm={5}
    >
      <WithStyles(ForwardRef(Typography))
        data-testid="dsi-dsid-0"
        gutterBottom={true}
        noWrap={true}
        variant="body2"
      >
        test.pdf
         (
        100 MB
        )
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={3}
      sm={4}
    >
      <Memo(NewGenericSelectField)
        autoFocus={false}
        disabled={false}
        displayEmpty={true}
        error="This field is required"
        formHelperTextProps={
          Object {
            "className": undefined,
          }
        }
        genericSelectFieldId="dsi-open-access-0"
        hideLabel={true}
        itemsList={
          Array [
            Object {
              "text": "Open Access",
              "value": 5,
            },
            Object {
              "text": "Closed Access",
              "value": 1,
            },
            Object {
              "text": "Inherit from parent collection",
              "value": 99,
            },
          ]
        }
        onChange={[MockFunction]}
        required={true}
        selectPrompt="Select access conditions"
        selectProps={
          Object {
            "className": undefined,
            "input": <WithStyles(ForwardRef(Input))
              autoFocus={false}
              classes={
                Object {
                  "root": undefined,
                }
              }
              disableUnderline={true}
            />,
          }
        }
        value=""
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={2}
      sm={2}
    >
      <WithStyles(ForwardRef(Typography))
        data-testid="dsi-embargo-date-0"
        gutterBottom={true}
        variant="body2"
      >
        No date required
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className=""
      item={true}
      xs={1}
    >
      <Connect(FileUploadRowStatus)
        disabled={false}
        fileUploadRowStatusId="dsi-dsid-0"
        name="test.pdf"
        onDelete={[MockFunction]}
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    spacing={2}
    wrap="nowrap"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={1}
    >
      <WithStyles(ForwardRef(IconButton))
        data-testid="new-file-upload-down-0"
        disabled={false}
        id="new-file-upload-down-0"
      >
        <Memo(ForwardRef(ExpandMoreIcon)) />
      </WithStyles(ForwardRef(IconButton))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`Component FileUploadRowDefaultView should render default view with styles 1`] = `
<FileUploadRowDefaultView
  accessConditionId={null}
  classes={
    Object {
      "error": "FileUploadRowDefaultView-error-6",
      "icon": "FileUploadRowDefaultView-icon-1",
      "placeholder": "FileUploadRowDefaultView-placeholder-4",
      "row": "FileUploadRowDefaultView-row-2",
      "selected": "FileUploadRowDefaultView-selected-5",
      "selector": "FileUploadRowDefaultView-selector-3",
      "upDownArrow": "FileUploadRowDefaultView-upDownArrow-8",
      "upDownArrowContainer": "FileUploadRowDefaultView-upDownArrowContainer-7",
      "upDownArrowContainerBottom": "FileUploadRowDefaultView-upDownArrowContainerBottom-9",
    }
  }
  disabled={false}
  embargoDate="01/01/2017"
  index={0}
  locale={
    Object {
      "embargoDateClosedAccess": "No date required",
    }
  }
  name="test.pdf"
  onAccessConditionChange={[MockFunction]}
  onDelete={[MockFunction]}
  onEmbargoDateChange={[MockFunction]}
  requireOpenAccessStatus={true}
  size="100 MB"
/>
`;

exports[`Component FileUploadRowDefaultView should render embargo date picker if access condition is set to open access 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 4,
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    spacing={2}
    wrap="nowrap"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={1}
    >
      <WithStyles(ForwardRef(IconButton))
        data-testid="new-file-upload-up-0"
        disabled={true}
        id="new-file-upload-down-0"
      >
        <Memo(ForwardRef(ExpandLessIcon)) />
      </WithStyles(ForwardRef(IconButton))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    spacing={1}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={6}
      sm={5}
    >
      <WithStyles(ForwardRef(Typography))
        data-testid="dsi-dsid-0"
        gutterBottom={true}
        noWrap={true}
        variant="body2"
      >
        test.pdf
         (
        100 MB
        )
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={3}
      sm={4}
    >
      <Memo(NewGenericSelectField)
        autoFocus={false}
        disabled={false}
        displayEmpty={true}
        error={false}
        formHelperTextProps={
          Object {
            "className": undefined,
          }
        }
        genericSelectFieldId="dsi-open-access-0"
        hideLabel={true}
        itemsList={
          Array [
            Object {
              "text": "Open Access",
              "value": 5,
            },
            Object {
              "text": "Closed Access",
              "value": 1,
            },
          ]
        }
        onChange={[MockFunction]}
        required={true}
        selectPrompt="Select access conditions"
        selectProps={
          Object {
            "className": undefined,
            "input": <WithStyles(ForwardRef(Input))
              autoFocus={false}
              classes={
                Object {
                  "root": undefined,
                }
              }
              disableUnderline={true}
            />,
          }
        }
        value={5}
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={2}
      sm={2}
    >
      <WithStyles(FileUploadEmbargoDate)
        disabled={false}
        fileUploadEmbargoDateId="dsi-embargo-date-0"
        minDate={2017-06-29T14:00:00.000Z}
        onChange={[MockFunction]}
        value="01/01/2017"
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className=""
      item={true}
      xs={1}
    >
      <Connect(FileUploadRowStatus)
        disabled={false}
        fileUploadRowStatusId="dsi-dsid-0"
        name="test.pdf"
        onDelete={[MockFunction]}
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    spacing={2}
    wrap="nowrap"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={1}
    >
      <WithStyles(ForwardRef(IconButton))
        data-testid="new-file-upload-down-0"
        disabled={false}
        id="new-file-upload-down-0"
      >
        <Memo(ForwardRef(ExpandMoreIcon)) />
      </WithStyles(ForwardRef(IconButton))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;
